--- a/platform-modules/manager/pom.xml
+++ b/platform-modules/manager/pom.xml
@@ -93,6 +93,11 @@
 		    <version>1.12.1</version>
 		    <scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.ekstep</groupId>
+			<artifactId>VisionAPI</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
