--- a/platform-devops/ansible/roles/neo4j-backup/tasks/main.yml
+++ b/platform-devops/ansible/roles/neo4j-backup/tasks/main.yml
@@ -1,12 +1,10 @@
 - name: Complete backup
   become: yes
-  file: path=/home/learning/neo4j-backup state=absent
+  file: path=/home/learning/{{graph_machine}} state=absent
   
 - name: create directory
   become: yes
-  file: path={{item}} state=directory owner=learning group=learning recurse=yes
-  with_items:
-             - /home/learning/neo4j-backup
+  file: path=/home/learning/{{graph_machine}} state=directory owner=learning group=learning recurse=yes
   
 - name: copy template of scripthell script to stop service
   become: yes
