--- a/platform-devops/ansible/roles/neo4j-migration-import/tasks/main.yml
+++ b/platform-devops/ansible/roles/neo4j-migration-import/tasks/main.yml
@@ -4,56 +4,40 @@
   become_user: learning
   shell: ps -ef | grep {{neo4j_home}}  | grep -v grep | wc -l
   register: neo4j_process
-  tags: 
-       - learning
-       - language
   
-
 - name: Stop the neo4j
   become: yes
   become_user: learning
   command: chdir={{ neo4j_home }}/bin ./neo4j stop
   when: "neo4j_process.stdout != '0'"
-  tags: 
-       - learning
-       - language
-
+  
 - name: Cleanup
   become: yes
   file: path={{ neo4j_home }}/data/databases/graph.db state=absent
-  tags: 
-       - learning
-       - language
- 
+  
 - name: create graph.db
   become: yes
   file: path={{ neo4j_home }}/data/databases/graph.db state=directory owner={{user}} group={{user}}
-  tags: 
-       - learning
-       - language
-
+  
 - name: Download the  backup zip file 
   become: yes
   become_user: learning
-  command: aws s3 cp {{neo4j_backup_path}}/{{graph_machine}}_{{instance}}_{{date}}.tar.gz home/learning/
-  tags: 
-       - learning
-       - language
-
+  command: aws s3 cp {{neo4j_backup_path}}/{{graph_machine}}_{{instance}}_{{date}}.tar.gz /home/learning/
+  
+- name: remove 
+  become: yes
+  become_user: learning
+  file: path=/home/learning/{{graph_machine}} state=absent
+  
 
 - name: Unarchieve 
   become: yes
   become_user: learning
-  unarchive: src=home/learning/{{graph_machine}}_{{instance}}_{{date}}.tar.gz dest=home/learning/ copy=no group={{user}} owner={{user}} creates={{graph_machine}}_{{instance}}_{{date}}
-  tags: 
-       - learning
-       - language
-
+  command: tar -xvf {{graph_machine}}_{{instance}}_{{date}}.tar.gz -C /home/learning/
+  
 
 - name: copy all the graph files 
   become: yes
   become_user: learning
-  shell: cp -r /home/learning/{{graph_machine}}_{{instance}}_{{date}}/* /home/learning/{{ neo4j_dir }}/neo4j-enterprise-3.0.4/data/databases/graph.db/
-  tags: 
-       - learning
-       - language
+  shell: cp -r /home/learning/{{graph_machine}}/* /home/learning/{{ neo4j_dir }}/neo4j-enterprise-3.0.4/data/databases/graph.db/
+  
