--- a/searchIndex-platform/module/searchindex-consumer/pom.xml
+++ b/searchIndex-platform/module/searchindex-consumer/pom.xml
@@ -19,6 +19,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.ekstep</groupId>
+			<artifactId>VisionAPI</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>com.ilimi</groupId>
 			<artifactId>ekstep-manager</artifactId>
 			<version>1.0-SNAPSHOT</version>
