Issue #671 fix: Added start neo4j commands

--- a/platform-devops/ansible/roles/neo4j-migration-import/tasks/main.yml
+++ b/platform-devops/ansible/roles/neo4j-migration-import/tasks/main.yml
@@ -40,4 +40,17 @@
   become: yes
   become_user: learning
   shell: cp -r /home/learning/{{graph_machine}}/* /home/learning/{{ neo4j_dir }}/neo4j-enterprise-3.0.4/data/databases/graph.db/
+
+- name: Check if neo4j is running
+  become_user: learning
+  shell: ps -ef | grep "{{ neo4j_home }}"  | grep -v grep | wc -l
+  register: neo4j_process
+          
+- name: Start the neo4j
+  become: yes
+  become_user: learning
+  shell: "{{ neo4j_home }}/bin/neo4j start"
+  when: "neo4j_process.stdout == '0'"
+               
+
   
