--- a/platform-devops/ansible/roles/neo4j-backup/tasks/main.yml
+++ b/platform-devops/ansible/roles/neo4j-backup/tasks/main.yml
@@ -1,4 +1,4 @@
-- name: Complete backup
+- name: delete learning_graph or language_graph
   become: yes
   file: path=/home/learning/{{graph_machine}} state=absent
   
