Issue ekstep/Learning-Platform#727 fix: Changes to neo4j-cluster playbook and inventory files

--- a/platform-devops/ansible/neo4j-cluster.yml
+++ b/platform-devops/ansible/neo4j-cluster.yml
@@ -1,16 +1,5 @@
-- hosts: languagecluster
+- hosts: "{{remote}}"
   remote_user: learning
   roles: 
         - java
         - neo4j-cluster
-  tags:
-       - language-cluster
-
-- hosts: learningcluster
-  remote_user: learning
-  roles: 
-        - java
-        - neo4j-cluster
-  tags:
-       - learning-cluster
-
