Issue ekstep/Learning-Platform#732 fix: merge neo4j-backup and neo4j-restore roles

--- a/platform-devops/ansible/neo4j-backup-restore.yml
+++ b/platform-devops/ansible/neo4j-backup-restore.yml
@@ -1,5 +1,6 @@
 - hosts: "{{remote}}"
   remote_user: learning
-  gather_facts: no
   roles:
-        - neo4j-migration-import
+        - neo4j-backup-restore
+  
+ 
