--- a/platform-tools/spikes/visionAPI/pom.xml
+++ b/platform-tools/spikes/visionAPI/pom.xml
@@ -14,7 +14,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -42,6 +42,11 @@
 			<groupId>com.ilimi</groupId>
 			<artifactId>ekstep-common</artifactId>
 			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.1</version>
 		</dependency>
 	</dependencies>
 </project>
