--- a/platform-devops/ansible/roles/createpath/tasks/main.yml
+++ b/platform-devops/ansible/roles/createpath/tasks/main.yml
@@ -91,6 +91,7 @@
        - language
        - config
        - search
+
 - include_vars: secrets/lp-secrets.yml
 
 - name: Add VisionKey.json key
@@ -101,3 +102,13 @@
        - config
        - search
        - total
+
+- name: Update bashrc for VisionKey.json
+  lineinfile: dest=/home/learning/.profile line='GOOGLE_APPLICATION_CREDENTIALS=/home/learning/platform/VisionKey.json'  state=present insertafter=EOF create=yes
+  tags:
+       - learning
+       - language
+       - config
+       - search
+       - total
+
