Issue ekstep/Learning-Platform#732 syntax: added tags

--- a/platform-devops/ansible/roles/createpath/tasks/main.yml
+++ b/platform-devops/ansible/roles/createpath/tasks/main.yml
@@ -93,22 +93,14 @@
        - search
 
 - include_vars: secrets/lp-secrets.yml
+  tags:
+       - always
 
 - name: Add VisionKey.json key
   copy: content="{{ vision_key }}" dest={{user_home}}/platform/VisionKey.json mode=755 owner={{user}} group={{user}}
   tags:
-       - learning
-       - language
-       - config
-       - search
-       - total
-
+       - always  
 - name: Update bashrc for VisionKey.json
   lineinfile: dest=/home/learning/.profile line='export GOOGLE_APPLICATION_CREDENTIALS=/home/learning/platform/VisionKey.json'  state=present insertafter=EOF create=yes
   tags:
-       - learning
-       - language
-       - config
-       - search
-       - total
-
+       - always
