--- a/platform-devops/ansible/roles/createpath/tasks/main.yml
+++ b/platform-devops/ansible/roles/createpath/tasks/main.yml
@@ -100,7 +100,9 @@
   copy: content="{{ vision_key }}" dest={{user_home}}/platform/VisionKey.json mode=755 owner={{user}} group={{user}}
   tags:
        - always  
+
 - name: Update bashrc for VisionKey.json
+  become: yes
   lineinfile: dest=/home/learning/.profile line='export GOOGLE_APPLICATION_CREDENTIALS=/home/learning/platform/VisionKey.json'  state=present insertafter=EOF create=yes
   tags:
        - always
