Issue ekstep/Learning-Platform#732 syntax: UPDATED CONSUMER PROPERTIES

--- a/platform-devops/ansible/roles/deployartifact/tasks/main.yml
+++ b/platform-devops/ansible/roles/deployartifact/tasks/main.yml
@@ -103,7 +103,7 @@
 - name: copy the consumer-config.xml
   become: yes
   become_user: learning
-  template: src=learning/consumer-config.properties.j2 dest=/data/properties/learning/consumer-config.xml
+  template: src=learning/consumer-config.properties.j2 dest=/data/properties/learning/consumer-config.properties
   tags:
        - learning
        - total
