--- a/platform-devops/ansible/roles/deployartifact/tasks/main.yml
+++ b/platform-devops/ansible/roles/deployartifact/tasks/main.yml
@@ -100,7 +100,7 @@
   tags:
        - learning
        - total
-- name: copy the consumer-config.xml
+- name: copy the consumer-config.xml properties
   become: yes
   become_user: learning
   template: src=learning/consumer-config.properties.j2 dest=/data/properties/learning/consumer-config.properties
