--- a/platform-devops/ansible/roles/createpath/tasks/main.yml
+++ b/platform-devops/ansible/roles/createpath/tasks/main.yml
@@ -103,6 +103,6 @@
 
 - name: Update bashrc for VisionKey.json
   become: yes
-  lineinfile: dest=/home/learning/.profile line='export GOOGLE_APPLICATION_CREDENTIALS=/home/learning/platform/VisionKey.json'  state=present insertafter=EOF create=yes
+  lineinfile: dest=/home/learning/.bashrc line='export GOOGLE_APPLICATION_CREDENTIALS=/home/learning/platform/VisionKey.json'  state=present insertafter=EOF create=yes
   tags:
        - always
