Issue ekstep/Learning-Platform#732 chore: Reverted back the neo4j backup

--- a/platform-devops/ansible/roles/deployartifact/tasks/main.yml
+++ b/platform-devops/ansible/roles/deployartifact/tasks/main.yml
@@ -100,7 +100,13 @@
   tags:
        - learning
        - total
- 
+- name: copy the consumer-config.xml properties
+  become: yes
+  become_user: learning
+  template: src=learning/consumer-config.properties.j2 dest=/data/properties/learning/consumer-config.properties
+  tags:
+       - learning
+       - total
 
 - name: copy the database.properties
   become: yes
