Issue ekstep/Learning-Platform#732 chore: Reverted back the neo4j backup

--- a/platform-devops/ansible/provision.yml
+++ b/platform-devops/ansible/provision.yml
@@ -1,13 +1,13 @@
 - hosts: "{{remote}}"
   remote_user: learning
   roles:
-        - aws-login
-        - java
+       # - aws-login
+       # - java
         - createpath
-        - tomcat
-        - ffmpeg
-        - imagemagick
-        - logstash
-        - search-service
-        - redis
-        - mongodb       
+       # - tomcat
+       # - ffmpeg
+       # - imagemagick
+       # - logstash
+       # - search-service
+       # - redis
+       # - mongodb       
