--- a/platform-devops/ansible/roles/neo4j-restore/tasks/main.yml
+++ b/platform-devops/ansible/roles/neo4j-restore/tasks/main.yml
@@ -23,7 +23,7 @@
 - name: Download the  backup zip file 
   become: yes
   become_user: learning
-  command: aws s3 cp {{neo4j_backup_url}}{{graph_machine}}_{{instance}}_{{date}}.tar.gz /home/learning/
+  command: aws s3 cp {{neo4j_backup_url}}{{date}}_{{graph_machine}}_{{instance}}.tar.gz /home/learning/
   
 - name: remove 
   become: yes
