--- a/platform-ui/scripts/itemImport/ftb_mapping_v2.json
+++ b/platform-ui/scripts/itemImport/ftb_mapping_v2.json
@@ -11,46 +11,46 @@
 		"max_score": {"literal": 1},
 		"partial_scoring": {"literal": false},
 
+		"identifier":{"col-def":{"column" : 0}},
+		"code": {"col-def": {"column" : 1}},
+		"conceptIds": {"col-def": {"column" : 2, "type": "list"}},
+		"title": {"col-def": {"column" : 3}},
+		"description": {"col-def": {"column" : 4}},
+		"question": {"col-def": {"column" : 5}},
 
-		"code": {"col-def": {"column" : 0}},
-		"conceptIds": {"col-def": {"column" : 1, "type": "list"}},
-		"title": {"col-def": {"column" : 2}},
-		"description": {"col-def": {"column" : 3}},
-		"question": {"col-def": {"column" : 4}},
+		"question_image": {"col-def": {"column" : 6}},
+	    "question_audio": {"col-def": {"column" : 7}},
+    	"question_count": {"col-def": {"column" : 8, "type": "number"}},
 
-		"question_image": {"col-def": {"column" : 5}},
-	    "question_audio": {"col-def": {"column" : 6}},
-    	"question_count": {"col-def": {"column" : 7, "type": "number"}},
+    	"domain": {"col-def": {"column" : 9}},
+    	"language": {"col-def": {"column" : 10}},
 
-    	"domain": {"col-def": {"column" : 8}},
-    	"language": {"col-def": {"column" : 9}},
-
-		"gradeLevel": {"col-def": {"column" : 10}},
-		"qlevel": {"col-def": {"column" : 11}},
-		"keywords": {"col-def": {"column" : 12, "type": "list"}},
+		"gradeLevel": {"col-def": {"column" : 11}},
+		"qlevel": {"col-def": {"column" : 12}},
+		"keywords": {"col-def": {"column" : 13, "type": "list"}},
 
 		"media": [
 			{
-	        	"id": {"col-def": {"column" : 5, "type": "string"}},
+	        	"id": {"col-def": {"column" : 6, "type": "string"}},
 	        	"type": {"literal": "image"},
-	        	"asset_id": {"col-def": {"column" : 5, "type": "string"}}
+	        	"asset_id": {"col-def": {"column" : 6, "type": "string"}}
 	    	},
 	    	{
-	        	"id": {"col-def": {"column" : 6, "type": "string"}},
+	        	"id": {"col-def": {"column" : 7, "type": "string"}},
 	        	"type": {"literal": "audio"},
-	        	"asset_id": {"col-def": {"column" : 6, "type": "string"}}
+	        	"asset_id": {"col-def": {"column" : 7, "type": "string"}}
 	    	}
 	    ],
 
-		"answers": {"col-def": {"column" : 13, "type": "list"}},
+		"answers": {"col-def": {"column" : 14, "type": "list"}},
 
-		"template": {"col-def": {"column" : 14}},
-    	"template_id": {"col-def": {"column" : 15}},
+		"template": {"col-def": {"column" : 15}},
+    	"template_id": {"col-def": {"column" : 16}},
 
 		"model": {
-			"param1": {"col-def": {"column" : 16, "type": "string"}},
-			"param2": {"col-def": {"column" : 17, "type": "string"}}
+			"param1": {"col-def": {"column" : 17, "type": "string"}},
+			"param2": {"col-def": {"column" : 18, "type": "string"}}
 		},
-		"start":18
+		"start":19
 	}
 }
