--- a/searchIndex-platform/module/searchindex-consumer/pom.xml
+++ b/searchIndex-platform/module/searchindex-consumer/pom.xml
@@ -111,6 +111,12 @@
 		    <version>2.7.4</version>
 		    <scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.ekstep</groupId>
+			<artifactId>lexile-measures</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
 	</dependencies>
 	<build>
 		<pluginManagement>
