--- a/language-platform/module/services/src/main/webapp/WEB-INF/web.xml
+++ b/language-platform/module/services/src/main/webapp/WEB-INF/web.xml
@@ -52,4 +52,14 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
+	<filter>
+		<filter-name>language</filter-name>
+		<filter-class>org.ekstep.interceptor.ResponseFilter</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>language</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
 </web-app>
