--- a/platform-config/service/src/main/webapp/WEB-INF/web.xml
+++ b/platform-config/service/src/main/webapp/WEB-INF/web.xml
@@ -45,5 +45,14 @@
 		<servlet-name>config-service</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	<filter>
+		<filter-name>config</filter-name>
+		<filter-class>org.ekstep.interceptor.ResponseFilter</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>config</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
 </web-app>
