--- a/platform-modules/service/src/main/webapp/WEB-INF/web.xml
+++ b/platform-modules/service/src/main/webapp/WEB-INF/web.xml
@@ -52,4 +52,14 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
+	<filter>
+		<filter-name>learning</filter-name>
+		<filter-class>com.ilimi.interceptor.ResponseFilter</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>learning</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
 </web-app>
