--- a/platform-modules/manager/pom.xml
+++ b/platform-modules/manager/pom.xml
@@ -77,21 +77,26 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.xmlunit/xmlunit-core -->
 		<dependency>
-		    <groupId>org.xmlunit</groupId>
-		    <artifactId>xmlunit-core</artifactId>
-		    <version>2.2.0</version>
+			<groupId>org.xmlunit</groupId>
+			<artifactId>xmlunit-core</artifactId>
+			<version>2.2.0</version>
 		</dependency>
 		<dependency>
-		    <groupId>net.javacrumbs.json-unit</groupId>
-		    <artifactId>json-unit</artifactId>
-		    <version>1.12.1</version>
-		    <scope>test</scope>
+			<groupId>net.javacrumbs.json-unit</groupId>
+			<artifactId>json-unit</artifactId>
+			<version>1.12.1</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
-		    <groupId>net.javacrumbs.json-unit</groupId>
-		    <artifactId>json-unit-fluent</artifactId>
-		    <version>1.12.1</version>
-		    <scope>test</scope>
+			<groupId>net.javacrumbs.json-unit</groupId>
+			<artifactId>json-unit-fluent</artifactId>
+			<version>1.12.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>uk.com.robust-it</groupId>
+			<artifactId>cloning</artifactId>
+			<version>1.9.3</version>
 		</dependency>
 	</dependencies>
 
@@ -99,42 +104,42 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
-        			<groupId>org.codehaus.mojo</groupId>
-        			<artifactId>cobertura-maven-plugin</artifactId>
-        			<version>2.7</version>
-        			<configuration>
-        				<aggregate>true</aggregate>
-        				<outputDirectory>coverageReport</outputDirectory>
-        				<formats>
-                        	<format>html</format>
-                        	<format>xml</format>
-                    	</formats>
-                    	<instrumentation>
-                    		<ignoreTrivial>true</ignoreTrivial>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>cobertura-maven-plugin</artifactId>
+					<version>2.7</version>
+					<configuration>
+						<aggregate>true</aggregate>
+						<outputDirectory>coverageReport</outputDirectory>
+						<formats>
+							<format>html</format>
+							<format>xml</format>
+						</formats>
+						<instrumentation>
+							<ignoreTrivial>true</ignoreTrivial>
 							<ignoreMethodAnnotations>
 								<ignoreMethodAnnotation>com.ilimi.common.dto.CoverageIgnore</ignoreMethodAnnotation>
 							</ignoreMethodAnnotations>
-            				<excludes>
-            					<exclude>**/common/**</exclude>
-              					<exclude>**/dto/**</exclude>
-              					<exclude>**/enums/**</exclude>
-              					<exclude>**/pipeline/**</exclude>
-              					<exclude>**/finalizer/**</exclude>
-              					<exclude>**/initializer/**</exclude>
-              					<exclude>**/PipelineRequestorClient**</exclude>
-              					<exclude>**/AssessmentItemCreatorProcessor**</exclude>
-              					<exclude>**/AssetCreatorProcessor**</exclude>
-              					<exclude>**/AssetsValidatorProcessor**</exclude>
-              					<exclude>**/taxonomy/util/**</exclude>
-              					<exclude>**/servlet/**</exclude>
-              					<exclude>**/interceptor/**</exclude>
-            				</excludes>
-          				</instrumentation>
-          				<check>
-          					<haltOnFailure>false</haltOnFailure>
-          				</check>
-        			</configuration>
-      			</plugin>
+							<excludes>
+								<exclude>**/common/**</exclude>
+								<exclude>**/dto/**</exclude>
+								<exclude>**/enums/**</exclude>
+								<exclude>**/pipeline/**</exclude>
+								<exclude>**/finalizer/**</exclude>
+								<exclude>**/initializer/**</exclude>
+								<exclude>**/PipelineRequestorClient**</exclude>
+								<exclude>**/AssessmentItemCreatorProcessor**</exclude>
+								<exclude>**/AssetCreatorProcessor**</exclude>
+								<exclude>**/AssetsValidatorProcessor**</exclude>
+								<exclude>**/taxonomy/util/**</exclude>
+								<exclude>**/servlet/**</exclude>
+								<exclude>**/interceptor/**</exclude>
+							</excludes>
+						</instrumentation>
+						<check>
+							<haltOnFailure>false</haltOnFailure>
+						</check>
+					</configuration>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
