Issue #803 Feat : Refactoring First Commit

--- a/platform-modules/pom.xml
+++ b/platform-modules/pom.xml
@@ -25,6 +25,7 @@
 		<module>manager</module>
 		<module>service</module>
 		<module>actors</module>
+		<module>content-manager</module>
 	</modules>
 
 	<dependencies>
