--- a/searchIndex-platform/module/searchindex-common/pom.xml
+++ b/searchIndex-platform/module/searchindex-common/pom.xml
@@ -19,14 +19,14 @@
 
 	<dependencies>
 		<dependency>
-    		<groupId>com.typesafe.akka</groupId>
-    		<artifactId>akka-actor_2.11</artifactId>
-    		<version>2.4.8</version>
-    	</dependency>
-    	<dependency>
-  			<groupId>com.typesafe.akka</groupId>
-  			<artifactId>akka-remote_2.11</artifactId>
-  			<version>2.4.8</version>
+			<groupId>com.typesafe.akka</groupId>
+			<artifactId>akka-actor_2.11</artifactId>
+			<version>2.4.8</version>
+		</dependency>
+		<dependency>
+			<groupId>com.typesafe.akka</groupId>
+			<artifactId>akka-remote_2.11</artifactId>
+			<version>2.4.8</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -82,10 +82,17 @@
 			<version>2.1</version>
 		</dependency>
 		<dependency>
-		    <groupId>com.ilimi</groupId>
-		    <artifactId>platform-common</artifactId>
-		    <version>1.0-SNAPSHOT</version>
+			<groupId>com.ilimi</groupId>
+			<artifactId>platform-common</artifactId>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpmime -->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpmime</artifactId>
+			<version>4.5.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
