--- a/platform-modules/manager/pom.xml
+++ b/platform-modules/manager/pom.xml
@@ -10,6 +10,12 @@
 	<artifactId>ekstep-manager</artifactId>
 	<dependencies>
 		<dependency>
+			<groupId>org.ekstep</groupId>
+			<artifactId>content-manager</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
