--- a/platform-modules/content-manager/pom.xml
+++ b/platform-modules/content-manager/pom.xml
@@ -7,6 +7,7 @@
 		<version>1.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
+	<groupId>org.ekstep</groupId>
 	<artifactId>content-manager</artifactId>
 	<dependencies>
 		<dependency>
