Issue #682 docs : language api updates

--- a/docs/language_model/api-docs/language-platform-api.yaml
+++ b/docs/language_model/api-docs/language-platform-api.yaml
@@ -342,7 +342,7 @@ paths:
           schema:
             $ref: "#/definitions/FailedResponseHeader"
       security: []
-  /v3/tools/translate?language_id=###&lemma=###&languages=###&languages=###:
+  /v3/tools/translate?language_id=###&lemma=###&languages=###:
     post:
       tags:
       - "Tools"
