--- a/platform-tools/scripts/orchestrator/api/content_v2/json/register-migrateAssets.json
+++ b/platform-tools/scripts/orchestrator/api/content_v2/json/register-migrateAssets.json
@@ -16,5 +16,6 @@
         ]
     },
     "body": "",
-    "apiId": "ekstep.content.migrate"
+    "apiId": "ekstep.learning.content.migrateThumnails",
+    "version": "2.0"
 }
