--- a/platform-tests/pom.xml
+++ b/platform-tests/pom.xml
@@ -54,9 +54,10 @@
 			<type>jar</type>
 		</dependency>
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-1.2-api</artifactId>
+		    <version>2.2</version>
+		    <scope>test</scope>
 		</dependency>
 	</dependencies>
 
