--- a/searchIndex-platform/module/composite-search-api/pom.xml
+++ b/searchIndex-platform/module/composite-search-api/pom.xml
@@ -75,9 +75,10 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-1.2-api</artifactId>
+		    <version>2.2</version>
+		    <scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.ekstep</groupId>
