--- a/docs/domain_model_v2/api-docs/swagger/domain_model_api/domain_model_apisv3.yaml
+++ b/docs/domain_model_v2/api-docs/swagger/domain_model_api/domain_model_apisv3.yaml
@@ -1,6 +1,6 @@
 swagger: '2.0'
 info:
-  version: 2.0.0
+  version: '3.0'
   title: Domain Model API
   description: >-
     Domain Model encapsulates WHAT TO TEACH (Dimensions and Concepts) and HOW TO
@@ -9,7 +9,7 @@ info:
     name: EkStep License
     url: 'http:www.ekstep.in'
 host: api.EkStep.in
-basePath: /v3
+basePath: /domain/v3
 schemes:
   - https
 securityDefinitions: {}
