--- a/docs/domain_model_v2/api-docs/swagger/assessment_api/assessment_apis.yaml
+++ b/docs/domain_model_v2/api-docs/swagger/assessment_api/assessment_apis.yaml
@@ -1,16 +1,16 @@
 swagger: '2.0'
 info:
-  version: '2.0'
+  version: '3.0'
   title: Assessment - Service
   description: >-
     Assessment Service of EkStep Learning Platform provides resources to create,
-    manage and search Assessment Items and ItemSets. AssessmentItem API provides
-    resources to work with questions in the platform and ItemSet API provides
-    resources to create and manage ItemSets.
+    manage and search Assessment Items and itemsets. AssessmentItem API provides
+    resources to work with questions in the platform and itemset API provides
+    resources to create and manage itemsets.
   license:
     name: EkStep License
     url: 'http:www.EkStep.in'
-basePath: /v3
+basePath: /assessment/v3
 host: api.ekstep.in
 securityDefinitions: {}
 schemes:
@@ -22,8 +22,8 @@ produces:
 tags:
   - name: AssessmentItem
     description: Everything related to CRUD Operations of the AssessmentItem
-  - name: ItemSet
-    description: Everything related to CRUD Operations of the ItemSet
+  - name: itemset
+    description: Everything related to CRUD Operations of the itemset
 paths:
   /items/search:
     post:
@@ -257,27 +257,27 @@ paths:
       security: []
   /itemsets/create:
     post:
-      summary: Creates an ItemSet
+      summary: Creates an itemset
       description: >-
-        This API is used to create an ItemSet into the _EkStep Platform_ based
+        This API is used to create an itemset into the _EkStep Platform_ based
         on the request body provided. This endpoint returns the response Object
         with SetId created
       tags:
-        - ItemSet
-      operationId: itemSet.create
+        - itemset
+      operationId: itemset.create
       produces:
         - application/json
       parameters:
-        - name: ItemSet create Request
+        - name: itemset create Request
           in: body
           required: true
           schema:
-            $ref: '#/definitions/creatItemSetRequest'
+            $ref: '#/definitions/creatitemsetRequest'
       responses:
         '200':
           description: Item Created Successfully
           schema:
-            $ref: '#/definitions/ItemSetCreateResponse'
+            $ref: '#/definitions/itemsetCreateResponse'
         '400':
           description: >-
             Error While creating Item! | Error occurred while operation, mostly
@@ -293,107 +293,107 @@ paths:
           schema:
             $ref: '#/definitions/FailedResponseHeader'
       security: []
-  '/itemsets/read/{ItemSetId}':
+  '/itemsets/read/{itemsetId}':
     get:
-      summary: Gets an ItemSet
+      summary: Gets an itemset
       description: >-
-        This API is used to fetch an ItemSet from Item Repository of EkStep
-        Platform. This endpoint returns the entire ItemSet Object with default
+        This API is used to fetch an itemset from Item Repository of EkStep
+        Platform. This endpoint returns the entire itemset Object with default
         fields.
       tags:
-        - ItemSet
-      operationId: itemSet.find
+        - itemset
+      operationId: itemset.find
       produces:
         - application/json
       parameters:
-        - name: ItemSetId
+        - name: itemsetId
           in: path
           required: true
-          description: itemSetId
+          description: itemsetId
           type: string
       responses:
         '200':
-          description: ItemSet fetched Successfully
+          description: itemset fetched Successfully
           schema:
-            $ref: '#/definitions/ItemSetgetResponse'
+            $ref: '#/definitions/itemsetgetResponse'
         '400':
           description: >-
-            Error While fetching the ItemSet! | Error occurred while operation,
+            Error While fetching the itemset! | Error occurred while operation,
             mostly because of the input given by client, In general it is
             'Client Exception'.
           schema:
             $ref: '#/definitions/FailedResponseHeader'
         '500':
           description: >-
-            Error While fetching the ItemSet! | Error occurred while operation,
+            Error While fetching the itemset! | Error occurred while operation,
             mostly because of erroneous condition on server, In general it is
             'Server Exception' or 'Exception'.
           schema:
             $ref: '#/definitions/FailedResponseHeader'
       security: []
-  '/itemsets/retire//{ItemSetId}':
+  '/itemsets/retire/{itemsetId}':
     delete:
-      summary: Deletes an ItemSet
+      summary: Deletes an itemset
       description: >-
-        This API is used to delete an Item set from the ItemSet repository of
+        This API is used to delete an Item set from the itemset repository of
         EkStep Platform.
       tags:
-        - ItemSet
-      operationId: itemSet.delete
+        - itemset
+      operationId: itemset.delete
       produces:
         - application/json
       parameters:
-        - name: ItemSetId
+        - name: itemsetId
           in: path
           required: true
           type: string
       responses:
         '200':
-          description: ItemSet deleted Successfully
+          description: itemset deleted Successfully
           schema:
-            $ref: '#/definitions/ItemSetDeleteResponse'
+            $ref: '#/definitions/itemsetDeleteResponse'
         '400':
           description: >-
-            Error While deleting the ItemSet! | Error occurred while operation,
+            Error While deleting the itemset! | Error occurred while operation,
             mostly because of the input given by client, In general it is
             'Client Exception'.
           schema:
             $ref: '#/definitions/FailedResponseHeader'
         '500':
           description: >-
-            Error While deleting the ItemSet! | Error occurred while operation,
+            Error While deleting the itemset! | Error occurred while operation,
             mostly because of erroneous condition on server, In general it is
             'Server Exception' or 'Exception'.
           schema:
             $ref: '#/definitions/FailedResponseHeader'
       security: []
-  '/itemsets/update/{ItemSetId}':
+  '/itemsets/update/{itemsetId}':
     patch:
-      summary: Updates an ItemSet
+      summary: Updates an itemset
       description: >-
-        This API is used to update an existing ItemSet in the Item repository 
+        This API is used to update an existing itemset in the Item repository 
         based on the request body provided from the _EkStep Platform_. This
         endpoint returns responseObject with SetId on updation
       tags:
-        - ItemSet
-      operationId: itemSet.patch
+        - itemset
+      operationId: itemset.patch
       produces:
         - application/json
       parameters:
-        - name: ItemSetId
+        - name: itemsetId
           in: path
           required: true
           type: string
-        - name: ItemSetUpdateRequest
+        - name: itemsetUpdateRequest
           in: body
           required: true
           schema:
-            $ref: '#/definitions/updateItemSetRequest'
+            $ref: '#/definitions/updateitemsetRequest'
       responses:
         '200':
-          description: Itemset Updated Successfully
+          description: itemset Updated Successfully
           schema:
-            $ref: '#/definitions/ItemSetUpdateResponse'
+            $ref: '#/definitions/itemsetUpdateResponse'
         '400':
           description: >-
             Error While Updating the Item Set! | Error occurred while operation,
@@ -411,13 +411,13 @@ paths:
       security: []
   /itemsets/search:
     post:
-      summary: Search an ItemSet
+      summary: Search an itemset
       description: >-
-        This API is used to search and retrieve all ItemSets from the Item
+        This API is used to search and retrieve all itemsets from the Item
         repository based on the given search creteria in the request body
       tags:
-        - ItemSet
-      operationId: itemSet.search
+        - itemset
+      operationId: itemset.search
       produces:
         - application/json
       parameters:
@@ -425,22 +425,22 @@ paths:
           in: body
           required: true
           schema:
-            $ref: '#/definitions/searchItemSetRequest'
+            $ref: '#/definitions/searchitemsetRequest'
       responses:
         '200':
-          description: ItemSets searched Successfully
+          description: itemsets searched Successfully
           schema:
-            $ref: '#/definitions/ItemSetSearchResponse'
+            $ref: '#/definitions/itemsetSearchResponse'
         '400':
           description: >-
-            Error While searching for an ItemSet! | Error occurred while
+            Error While searching for an itemset! | Error occurred while
             operation, mostly because of the input given by client, In general
             it is 'Client Exception'
           schema:
             $ref: '#/definitions/FailedResponseHeader'
         '500':
           description: >-
-            Error While searching for an ItemSet! | Error occurred while
+            Error While searching for an itemset! | Error occurred while
             operation, mostly because of erroneous condition on server, In
             general it is 'Server Exception' or 'Exception'
           schema:
@@ -448,13 +448,13 @@ paths:
       security: []
   /itemsets/list:
     post:
-      summary: Lists an ItemSet
+      summary: Lists an itemset
       description: >-
-        This API is used to list and retrieve all ItemSets from the Item
+        This API is used to list and retrieve all itemsets from the Item
         repository based on the given search creteria in the request body
       tags:
-        - ItemSet
-      operationId: itemSet.list
+        - itemset
+      operationId: itemset.list
       produces:
         - application/json
       parameters:
@@ -462,60 +462,60 @@ paths:
           in: body
           required: true
           schema:
-            $ref: '#/definitions/listItemSetRequest'
+            $ref: '#/definitions/listitemsetRequest'
       responses:
         '200':
-          description: ItemSets listed Successfully
+          description: itemsets listed Successfully
           schema:
-            $ref: '#/definitions/ItemSetlistResponse'
+            $ref: '#/definitions/itemsetlistResponse'
         '400':
           description: >-
-            Error While fetching all ItemSet lists! | Error occurred while
+            Error While fetching all itemset lists! | Error occurred while
             operation, mostly because of the input given by client, In general
             it is 'Client Exception'
           schema:
             $ref: '#/definitions/FailedResponseHeader'
         '500':
           description: >-
-            Error While fetching all ItemSet lists! | Error occurred while
+            Error While fetching all itemset lists! | Error occurred while
             operation, mostly because of erroneous condition on server, In
             general it is 'Server Exception' or 'Exception'
           schema:
             $ref: '#/definitions/FailedResponseHeader'
       security: []
-  '/itemsets/generate/{ItemSetId}':
+  '/itemsets/generate/{itemsetId}':
     get:
-      summary: ' Generates an ItemSet'
+      summary: ' Generates an itemset'
       description: >-
-        This API is used to generate an ItemSet from ItemSet Repository of
-        EkStep Platform. This endpoint returns the entire ItemSet Object with
+        This API is used to generate an itemset from itemset Repository of
+        EkStep Platform. This endpoint returns the entire itemset Object with
         default fields. 
       tags:
-        - ItemSet
-      operationId: itemSet.generate
+        - itemset
+      operationId: itemset.generate
       produces:
         - application/json
       parameters:
-        - name: ItemSetId
+        - name: itemsetId
           in: path
           required: true
-          description: itemSetId
+          description: itemsetId
           type: string
       responses:
         '200':
-          description: ItemSet generated Successfully
+          description: itemset generated Successfully
           schema:
-            $ref: '#/definitions/generateItemSetResponse'
+            $ref: '#/definitions/generateitemsetResponse'
         '400':
           description: >-
-            Error While generating the ItemSet! | Error occurred while
+            Error While generating the itemset! | Error occurred while
             operation, mostly because of the input given by client, In general
             it is 'Client Exception'.
           schema:
             $ref: '#/definitions/FailedResponseHeader'
         '500':
           description: >-
-            Error While generating the ItemSet! | Error occurred while
+            Error While generating the itemset! | Error occurred while
             operation, mostly because of erroneous condition on server, In
             general it is 'Server Exception' or 'Exception'.
           schema:
@@ -579,7 +579,7 @@ definitions:
         $ref: '#/definitions/RequestParams'
       request:
         $ref: '#/definitions/createAssessmentObject'
-  creatItemSetRequest:
+  creatitemsetRequest:
     type: object
     required:
       - id
@@ -598,7 +598,7 @@ definitions:
         $ref: '#/definitions/RequestParams'
       request:
         $ref: '#/definitions/createItemWithMembersObject'
-  updateItemSetRequest:
+  updateitemsetRequest:
     type: object
     required:
       - id
@@ -616,8 +616,8 @@ definitions:
       params:
         $ref: '#/definitions/RequestParams'
       request:
-        $ref: '#/definitions/updateItemSetWithMembers'
-  searchItemSetRequest:
+        $ref: '#/definitions/updateitemsetWithMembers'
+  searchitemsetRequest:
     type: object
     required:
       - id
@@ -635,8 +635,8 @@ definitions:
       params:
         $ref: '#/definitions/RequestParams'
       request:
-        $ref: '#/definitions/searchItemSetObject'
-  listItemSetRequest:
+        $ref: '#/definitions/searchitemsetObject'
+  listitemsetRequest:
     type: object
     required:
       - id
@@ -654,7 +654,7 @@ definitions:
       params:
         $ref: '#/definitions/RequestParams'
       request:
-        $ref: '#/definitions/searchItemSetObject'
+        $ref: '#/definitions/searchitemsetObject'
   createAssessmentRequest:
     type: object
     required:
@@ -851,7 +851,7 @@ definitions:
         description: API response code
       result:
         $ref: '#/definitions/NodeId'
-  ItemSetDeleteResponse:
+  itemsetDeleteResponse:
     title: Delete Response
     properties:
       id:
@@ -870,7 +870,7 @@ definitions:
         description: API response code
       result:
         $ref: '#/definitions/result'
-  ItemSetCreateResponse:
+  itemsetCreateResponse:
     title: Create Response
     properties:
       id:
@@ -889,7 +889,7 @@ definitions:
         description: API response code
       result:
         $ref: '#/definitions/SetId'
-  ItemSetUpdateResponse:
+  itemsetUpdateResponse:
     title: Update Response
     properties:
       id:
@@ -908,7 +908,7 @@ definitions:
         description: API response code
       result:
         $ref: '#/definitions/SetId'
-  ItemSetgetResponse:
+  itemsetgetResponse:
     title: Get Response
     properties:
       id:
@@ -927,7 +927,7 @@ definitions:
         description: API response code
       result:
         $ref: '#/definitions/assessment_item_set'
-  ItemSetSearchResponse:
+  itemsetSearchResponse:
     title: Get Response
     properties:
       id:
@@ -948,7 +948,7 @@ definitions:
         type: array
         items:
           $ref: '#/definitions/assessment_item_set'
-  ItemSetlistResponse:
+  itemsetlistResponse:
     title: Get Response
     properties:
       id:
@@ -981,7 +981,7 @@ definitions:
         $ref: '#/definitions/createItemObject'
   createItemObject:
     type: object
-    title: creates ItemSet
+    title: creates itemset
     allOf:
       - $ref: '#/definitions/assessment_item_set'
       - properties:
@@ -990,7 +990,7 @@ definitions:
             items:
               $ref: '#/definitions/members'
       - $ref: '#/definitions/outRelations'
-  updateItemSetWithMembers:
+  updateitemsetWithMembers:
     properties:
       identifier:
         type: string
@@ -999,8 +999,8 @@ definitions:
         type: string
         description: objectType
       metadata:
-        $ref: '#/definitions/updateItemSetObject'
-  updateItemSetObject:
+        $ref: '#/definitions/updateitemsetObject'
+  updateitemsetObject:
     type: object
     allOf:
       - $ref: '#/definitions/assessment_item_set'
@@ -1011,13 +1011,13 @@ definitions:
       membersIds:
         type: string
         description: list of memberIds
-  searchItemSetObject:
+  searchitemsetObject:
     properties:
       metadata:
         type: array
         items:
           $ref: '#/definitions/filters'
-  generateItemSetResponse:
+  generateitemsetResponse:
     title: Generate Response
     properties:
       id:
@@ -1104,7 +1104,7 @@ definitions:
         description: last updated date
       usedFor:
         type: string
-        description: where the ItemSET is used For
+        description: where the itemset is used For
       SET_TYPE:
         type: string
         description: Item Set Type
@@ -1175,7 +1175,7 @@ definitions:
         description: template Id
       usedFor:
         type: string
-        description: where the ItemSET is used For
+        description: where the itemset is used For
       max_score:
         type: number
         description: maximum score
