--- a/docs/domain_model_v2/api-docs/swagger/composite_search_api/composite_search_apis.yaml
+++ b/docs/domain_model_v2/api-docs/swagger/composite_search_api/composite_search_apis.yaml
@@ -1,6 +1,6 @@
 swagger: '2.0'
 info:
-  version: '2.0'
+  version: '3.0'
   title: Composite Search - API
   description: >-
     Composite search API provides a single window access to all indexed data in
@@ -10,7 +10,7 @@ info:
   license:
     name: EkStep License
     url: 'http:www.ekstep.in'
-basePath: /v3
+basePath: /search/v3
 host: api.ekstep.in
 securityDefinitions: {}
 consumes:
