Issue #1033 feat: Update swagger docs with latest v3 APIs

--- a/docs/domain_model_v2/api-docs/swagger/composite_search_api/composite_search_apis.yaml
+++ b/docs/domain_model_v2/api-docs/swagger/composite_search_api/composite_search_apis.yaml
@@ -30,7 +30,7 @@ paths:
         the returned data structures for each object type conform to the
         definition specification for that object type.
       tags: []
-      operationId: search
+      operationId: ekstep.search.composite-search
       consumes:
         - application/json
       produces:
