Issue #1033 feat: Update swagger docs with latest v3 APIs

--- a/docs/domain_model_v2/api-docs/swagger/config/configV3.json
+++ b/docs/domain_model_v2/api-docs/swagger/config/configV3.json
@@ -56,7 +56,7 @@
         "security": []
       }
     },
-    "/resourcebundles/read{languageId}": {
+    "/resourcebundles/read/{languageId}": {
       "get": {
         "summary": "Gets Specific resourcebundle",
         "description": "This API returns specific resourcebundle based on the specified language",
