Issue #1046 feat: Samza jobs - Audit history job

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		<module>orchestrator</module>
 		<module>platform-config</module>
 		<module>platform-tools/kernel-extension</module>
+		<module>platform-jobs</module>
 	</modules>
 
 	<dependencies>
