Issue #1033 feat: Update swagger docs with latest v3 APIs

--- a/docs/language_model/api-docs/language-platform-api.yaml
+++ b/docs/language_model/api-docs/language-platform-api.yaml
@@ -8,6 +8,8 @@ info:
   license:
     name: EkStep License
     url: www.ektep.in
+basePath: /language
+host: api.ekstep.in
 tags:
   - name: Word
     description: APIs for CRUD and search of word objects and to flag word object
