--- a/platform-jobs/samza/content-enrichment/pom.xml
+++ b/platform-jobs/samza/content-enrichment/pom.xml
@@ -12,13 +12,8 @@
 		<scala.version>2.11</scala.version>
 		<hadoop.version>2.6.2</hadoop.version>
 	</properties>
-	<artifactId>audit-history-job</artifactId>
+	<artifactId>content-enrichment</artifactId>
 	<dependencies>
-		<dependency>
-			<groupId>com.ilimi</groupId>
-			<artifactId>platform-dac</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
 		<dependency>
 			<groupId>org.ekstep</groupId>
 			<artifactId>samza-common</artifactId>
