--- a/platform-jobs/samza/distribution/pom.xml
+++ b/platform-jobs/samza/distribution/pom.xml
@@ -11,7 +11,56 @@
     <dependencies>
 		<dependency>
 			<groupId>org.ekstep</groupId>
-			<artifactId>audit-history-job</artifactId>
+			<artifactId>audit-history-indexer</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>tar.gz</type>
+			<classifier>distribution</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.ekstep</groupId>
+			<artifactId>composite-search-indexer</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>tar.gz</type>
+			<classifier>distribution</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.ekstep</groupId>
+			<artifactId>content-enrichment</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>tar.gz</type>
+			<classifier>distribution</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.ekstep</groupId>
+			<artifactId>publish-pipeline</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>tar.gz</type>
+			<classifier>distribution</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.ekstep</groupId>
+			<artifactId>upload-content</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>tar.gz</type>
+			<classifier>distribution</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.ekstep</groupId>
+			<artifactId>image-tagging</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>tar.gz</type>
+			<classifier>distribution</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.ekstep</groupId>
+			<artifactId>object-lifecycle</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>tar.gz</type>
+			<classifier>distribution</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.ekstep</groupId>
+			<artifactId>word-enrichment</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<type>tar.gz</type>
 			<classifier>distribution</classifier>
