Issue #1046 feat: Samza jobs - Composite search indexer

--- a/platform-jobs/samza/audit-history-indexer/src/main/config/local.audit-history-indexer.properties
+++ b/platform-jobs/samza/audit-history-indexer/src/main/config/local.audit-history-indexer.properties
@@ -1,6 +1,6 @@
 # Job
 job.factory.class=org.apache.samza.job.yarn.YarnJobFactory
-job.name=dev.audit-history-index
+job.name=dev.audit-history-indexer
 
 # YARN
 yarn.package.path=file://${basedir}/target/${project.artifactId}-${pom.version}-distribution.tar.gz
@@ -12,7 +12,7 @@ metrics.reporter.snapshot.stream=kafka.dev.lp.metrics
 metrics.reporter.jmx.class=org.apache.samza.metrics.reporter.JmxReporterFactory
 
 # Task
-task.class=org.ekstep.jobs.samza.task.AuditHistoryIndexTask
+task.class=org.ekstep.jobs.samza.task.AuditHistoryIndexerTask
 task.inputs=kafka.dev.learning.graph.events
 
 # Serializers
@@ -33,5 +33,5 @@ job.coordinator.system=kafka
 job.coordinator.replication.factor=1
 
 # Job specific config properties
-elastic-search-host=http://52.74.51.23
+elastic-search-host=http://localhost
 elastic-search-port=9200
