--- a/platform-jobs/samza/audit-history-indexer/src/main/config/audit-history-indexer.properties
+++ b/platform-jobs/samza/audit-history-indexer/src/main/config/audit-history-indexer.properties
@@ -1,6 +1,6 @@
 # Job
 job.factory.class=org.apache.samza.job.yarn.YarnJobFactory
-job.name=__env__.audit-history-index
+job.name=__env__.audit-history-indexer
 
 # YARN
 yarn.package.path=http://__yarn_host__:__yarn_port__/__env__/${project.artifactId}-${pom.version}-distribution.tar.gz
@@ -12,7 +12,7 @@ metrics.reporter.snapshot.stream=kafka.__env__.lp.metrics
 metrics.reporter.jmx.class=org.apache.samza.metrics.reporter.JmxReporterFactory
 
 # Task
-task.class=org.ekstep.backend.samza.task.AuditHistoryIndexTask
+task.class=org.ekstep.jobs.samza.task.AuditHistoryIndexerTask
 task.inputs=kafka.__env__.learning.graph.events
 
 # Serializers
