--- a/platform-jobs/samza/composite-search-indexer/pom.xml
+++ b/platform-jobs/samza/composite-search-indexer/pom.xml
@@ -15,6 +15,11 @@
 	<artifactId>composite-search-indexer</artifactId>
 	<dependencies>
 		<dependency>
+			<groupId>com.ilimi</groupId>
+			<artifactId>platform-dac</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.ekstep</groupId>
 			<artifactId>samza-common</artifactId>
 			<version>1.0-SNAPSHOT</version>
