Issue #1049 Feat : Properties

--- a/platform-modules/service/src/main/resources/graph.properties
+++ b/platform-modules/service/src/main/resources/graph.properties
@@ -9,3 +9,4 @@ graph.passport.key.base=31b6fd1c4d64e745c867e61a45edc34a
 route.domain=bolt://localhost:7687
 route.all=bolt://localhost:7687
 shard.id=1
+platform.data.node.cacheable.properties=versionKey,consumerId
