Issue #1046 feat: Samza jobs - Object lifecycle job

--- a/platform-jobs/samza/object-lifecycle/src/main/config/object-lifecycle.properties
+++ b/platform-jobs/samza/object-lifecycle/src/main/config/object-lifecycle.properties
@@ -12,7 +12,7 @@ metrics.reporter.snapshot.stream=kafka.__env__.lp.metrics
 metrics.reporter.jmx.class=org.apache.samza.metrics.reporter.JmxReporterFactory
 
 # Task
-task.class=org.ekstep.backend.samza.task.ObjectLifecycleTask
+task.class=org.ekstep.jobs.samza.task.ObjectLifecycleTask
 task.inputs=kafka.__env__.learning.graph.events
 
 # Serializers
