Issue #1048 feat : changes in graph cache and reading from properties

--- a/platform-modules/service/src/main/resources/graph.properties
+++ b/platform-modules/service/src/main/resources/graph.properties
@@ -10,3 +10,4 @@ route.domain=bolt://localhost:7687
 route.all=bolt://localhost:7687
 shard.id=1
 platform.data.node.cacheable.properties=versionKey,consumerId
+platform.auth.check.enabled=false
