--- a/platform-jobs/samza/audit-history-indexer/src/main/config/audit-history-indexer.properties
+++ b/platform-jobs/samza/audit-history-indexer/src/main/config/audit-history-indexer.properties
@@ -33,5 +33,5 @@ job.coordinator.system=kafka
 job.coordinator.replication.factor=1
 
 # Job specific config properties
-elastic-search-host=__es_host__
+elastic-search-host=http://__es_host__
 elastic-search-port=__es_port__
