Issue #1033 feat: content-enrichment consumer jobs

--- a/platform-jobs/samza/content-enrichment/src/main/config/content-enrichment.properties
+++ b/platform-jobs/samza/content-enrichment/src/main/config/content-enrichment.properties
@@ -1,6 +1,6 @@
 # Job
 job.factory.class=org.apache.samza.job.yarn.YarnJobFactory
-job.name=__env__.audit-history-index
+job.name=__env__.content.enrichment
 
 # YARN
 yarn.package.path=http://__yarn_host__:__yarn_port__/__env__/${project.artifactId}-${pom.version}-distribution.tar.gz
@@ -12,7 +12,7 @@ metrics.reporter.snapshot.stream=kafka.__env__.lp.metrics
 metrics.reporter.jmx.class=org.apache.samza.metrics.reporter.JmxReporterFactory
 
 # Task
-task.class=org.ekstep.backend.samza.task.AuditHistoryIndexTask
+task.class=org.ekstep.backend.samza.task.ContentEnrichmentTask
 task.inputs=kafka.__env__.learning.graph.events
 
 # Serializers
@@ -33,5 +33,3 @@ job.coordinator.system=kafka
 job.coordinator.replication.factor=1
 
 # Job specific config properties
-elastic-search-host=__es_host__
-elastic-search-port=__es_port__
