--- a/platform-jobs/samza/content-enrichment/pom.xml
+++ b/platform-jobs/samza/content-enrichment/pom.xml
@@ -15,6 +15,11 @@
 	<artifactId>content-enrichment</artifactId>
 	<dependencies>
 		<dependency>
+			<groupId>com.ilimi</groupId>
+			<artifactId>learning-actors</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.ekstep</groupId>
 			<artifactId>samza-common</artifactId>
 			<version>1.0-SNAPSHOT</version>
