Issue #956 feat : publish-pipeline samza job

--- a/platform-jobs/samza/publish-pipeline/src/main/config/publish-pipeline.properties
+++ b/platform-jobs/samza/publish-pipeline/src/main/config/publish-pipeline.properties
@@ -31,3 +31,20 @@ systems.kafka.producer.bootstrap.servers=__kafka_brokers__
 job.coordinator.system=kafka
 # Normally, this would be 3, but we have only one broker.
 job.coordinator.replication.factor=1
+
+#Job specif configuration
+redis.host=__redis_host__
+redis.port=__redis_port__
+redis.maxConnections=128
+akka.request_timeout=30
+environment.id=__environment_id__
+graph.passport.key.base=__graph_passport_key__
+route.domain=__lp_bolt_url__
+route.bolt.read.domain=__lp_bolt_read_url__
+route.bolt.write.domain=__lp_bolt_write_url__
+route.all=__other_bolt_url__
+route.bolt.read.all=__other_bolt_read_url__
+route.bolt.write.all=__other_bolt_write_url__
+shard.id=__mw_shard_id__
+cassandra.host=__cassandra_host__
+cassandra.port=__cassandra_port__
