Issue #956 feat : imageTagging samza job

--- a/platform-jobs/samza/image-tagging/src/main/config/image-tagging.properties
+++ b/platform-jobs/samza/image-tagging/src/main/config/image-tagging.properties
@@ -1,6 +1,6 @@
 # Job
 job.factory.class=org.apache.samza.job.yarn.YarnJobFactory
-job.name=__env__.audit-history-index
+job.name=__env__.image.tagging
 
 # YARN
 yarn.package.path=http://__yarn_host__:__yarn_port__/__env__/${project.artifactId}-${pom.version}-distribution.tar.gz
@@ -13,7 +13,7 @@ metrics.reporter.jmx.class=org.apache.samza.metrics.reporter.JmxReporterFactory
 
 # Task
 task.class=org.ekstep.backend.samza.task.AuditHistoryIndexTask
-task.inputs=kafka.__env__.learning.graph.events
+task.inputs=kafka.__env__.telemetry.raw
 
 # Serializers
 serializers.registry.json.class=org.apache.samza.serializers.JsonSerdeFactory
@@ -33,5 +33,17 @@ job.coordinator.system=kafka
 job.coordinator.replication.factor=1
 
 # Job specific config properties
-elastic-search-host=__es_host__
-elastic-search-port=__es_port__
+google.vision.tagging.enabled=__google_vision_tagging__
+redis.host=__redis_host__
+redis.port=__redis_port__
+redis.maxConnections=128
+akka.request_timeout=30
+environment.id=__environment_id__
+graph.passport.key.base=__graph_passport_key__
+route.domain=__lp_bolt_url__
+route.bolt.read.domain=__lp_bolt_read_url__
+route.bolt.write.domain=__lp_bolt_write_url__
+route.all=__other_bolt_url__
+route.bolt.read.all=__other_bolt_read_url__
+route.bolt.write.all=__other_bolt_write_url__
+shard.id=__mw_shard_id__
