--- a/platform-jobs/samza/image-tagging/src/main/config/local.image-tagging.properties
+++ b/platform-jobs/samza/image-tagging/src/main/config/local.image-tagging.properties
@@ -1,6 +1,6 @@
 # Job
 job.factory.class=org.apache.samza.job.yarn.YarnJobFactory
-job.name=dev.audit-history-index
+job.name=dev.image-tagging
 
 # YARN
 yarn.package.path=file://${basedir}/target/${project.artifactId}-${pom.version}-distribution.tar.gz
@@ -12,8 +12,9 @@ metrics.reporter.snapshot.stream=kafka.dev.lp.metrics
 metrics.reporter.jmx.class=org.apache.samza.metrics.reporter.JmxReporterFactory
 
 # Task
-task.class=org.ekstep.jobs.samza.task.AuditHistoryIndexTask
-task.inputs=kafka.dev.learning.graph.events
+task.class=org.ekstep.jobs.samza.task.ImageTaggingTask
+task.inputs=kafka.telemetry.raw
+task.opts=-agentlib:jdwp=transport=dt_socket,address=localhost:9009,server=y,suspend=y
 
 # Serializers
 serializers.registry.json.class=org.apache.samza.serializers.JsonSerdeFactory
@@ -33,5 +34,4 @@ job.coordinator.system=kafka
 job.coordinator.replication.factor=1
 
 # Job specific config properties
-elastic-search-host=http://52.74.51.23
-elastic-search-port=9200
+google.vision.tagging.enabled = false
