--- a/platform-jobs/samza/content-enrichment/src/main/config/content-enrichment.properties
+++ b/platform-jobs/samza/content-enrichment/src/main/config/content-enrichment.properties
@@ -33,3 +33,16 @@ job.coordinator.system=kafka
 job.coordinator.replication.factor=1
 
 # Job specific config properties
+redis.host=__redis_host__
+redis.port=__redis_port__
+redis.maxConnections=128
+akka.request_timeout=30
+environment.id=__environment_id__
+graph.passport.key.base=__graph_passport_key__
+route.domain=__lp_bolt_url__
+route.bolt.read.domain=__lp_bolt_read_url__
+route.bolt.write.domain=__lp_bolt_write_url__
+route.all=__other_bolt_url__
+route.bolt.read.all=__other_bolt_read_url__
+route.bolt.write.all=__other_bolt_write_url__
+shard.id=__mw_shard_id__
