--- a/platform-jobs/samza/image-tagging/pom.xml
+++ b/platform-jobs/samza/image-tagging/pom.xml
@@ -16,6 +16,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.ilimi</groupId>
+			<artifactId>learning-actors</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.ilimi</groupId>
 			<artifactId>platform-dac</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
@@ -24,6 +29,22 @@
 			<artifactId>samza-common</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.api-client</groupId>
+			<artifactId>google-api-client</artifactId>
+			<version>1.22.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.apis</groupId>
+			<artifactId>google-api-services-vision</artifactId>
+			<version>v1-rev30-1.22.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.api-client</groupId>
+			<artifactId>google-api-client-gson</artifactId>
+			<version>1.22.0</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
