Issue #956 feat : LP Samza Jobs

--- a/platform-jobs/samza/publish-pipeline/src/main/config/publish-pipeline.properties
+++ b/platform-jobs/samza/publish-pipeline/src/main/config/publish-pipeline.properties
@@ -48,3 +48,4 @@ route.bolt.write.all=__other_bolt_write_url__
 shard.id=__mw_shard_id__
 cassandra.host=__cassandra_host__
 cassandra.port=__cassandra_port__
+CONTENT_TO_VEC_URL=__content_to_vec_url__
