Issue #956 feat : Update Job config properties for samza jobs

--- a/platform-jobs/samza/content-enrichment/src/main/config/content-enrichment.properties
+++ b/platform-jobs/samza/content-enrichment/src/main/config/content-enrichment.properties
@@ -12,8 +12,8 @@ metrics.reporter.snapshot.stream=kafka.__env__.lp.metrics
 metrics.reporter.jmx.class=org.apache.samza.metrics.reporter.JmxReporterFactory
 
 # Task
-task.class=org.ekstep.backend.samza.task.ContentEnrichmentTask
-task.inputs=kafka.__env__.learning.graph.events
+task.class=org.ekstep.jobs.samza.task.ContentEnrichmentTask
+task.inputs=kafka.__env__.telemetry.raw
 
 # Serializers
 serializers.registry.json.class=org.apache.samza.serializers.JsonSerdeFactory
