--- a/platform-jobs/samza/publish-pipeline/src/main/config/publish-pipeline.properties
+++ b/platform-jobs/samza/publish-pipeline/src/main/config/publish-pipeline.properties
@@ -12,7 +12,7 @@ metrics.reporter.snapshot.stream=kafka.__env__.lp.metrics
 metrics.reporter.jmx.class=org.apache.samza.metrics.reporter.JmxReporterFactory
 
 # Task
-task.class=org.ekstep.backend.samza.task.PublishPipelineTask
+task.class=org.ekstep.jobs.samza.task.PublishPipelineTask
 task.inputs=kafka.__env__.telemetry.raw
 
 # Serializers
