--- a/platform-jobs/samza/image-tagging/src/main/config/image-tagging.properties
+++ b/platform-jobs/samza/image-tagging/src/main/config/image-tagging.properties
@@ -12,7 +12,7 @@ metrics.reporter.snapshot.stream=kafka.__env__.lp.metrics
 metrics.reporter.jmx.class=org.apache.samza.metrics.reporter.JmxReporterFactory
 
 # Task
-task.class=org.ekstep.backend.samza.task.AuditHistoryIndexTask
+task.class=org.ekstep.jobs.samza.task.ImageTaggingTask
 task.inputs=kafka.__env__.telemetry.raw
 
 # Serializers
