Issue #956 feat : Update samza job configurations with s3 properties

--- a/platform-jobs/samza/image-tagging/src/main/config/image-tagging.properties
+++ b/platform-jobs/samza/image-tagging/src/main/config/image-tagging.properties
@@ -47,3 +47,31 @@ route.all=__other_bolt_url__
 route.bolt.read.all=__other_bolt_read_url__
 route.bolt.write.all=__other_bolt_write_url__
 shard.id=__mw_shard_id__
+s3.env=__s3_config_environment__
+
+#S3 server configurations
+
+#Environment specific buckets
+s3.bucket.dev=ekstep-public-dev
+s3.bucket.qa=ekstep-public-qa
+s3.bucket.prod=ekstep-public-prod
+s3.bucket.sandbox=ekstep-public-sandbox
+
+#S3 Region configuration
+s3.region=AP_SOUTH_1
+
+#Folder configuration
+s3.content.folder=content
+s3.asset.folder=assets
+s3.artifact.folder=artifact
+s3.bundle.folder=bundle
+s3.media.folder=media
+s3.ecar.folder=ecar_files
+
+s3.upload.url.expiry = 600
+
+#Envionment specific URL prefix
+s3.url.dev=https://dev.ekstep.in
+s3.url.qa=https://qa.ekstep.in
+s3.url.prod=https://community.ekstep.in
+s3.url.sandbox=https://sandbox.ekstep.in
