Issue #956 feat : samza jobs deployment

--- a/platform-jobs/samza/image-tagging/src/main/config/image-tagging.properties
+++ b/platform-jobs/samza/image-tagging/src/main/config/image-tagging.properties
@@ -1,6 +1,6 @@
 # Job
 job.factory.class=org.apache.samza.job.yarn.YarnJobFactory
-job.name=__env__.image.tagging
+job.name=__env__.image-tagging
 
 # YARN
 yarn.package.path=http://__yarn_host__:__yarn_port__/__env__/${project.artifactId}-${pom.version}-distribution.tar.gz
@@ -8,7 +8,7 @@ yarn.package.path=http://__yarn_host__:__yarn_port__/__env__/${project.artifactI
 # Metrics
 metrics.reporters=snapshot,jmx
 metrics.reporter.snapshot.class=org.apache.samza.metrics.reporter.MetricsSnapshotReporterFactory
-metrics.reporter.snapshot.stream=kafka.__env__.lp.metrics
+metrics.reporter.snapshot.stream=kafka.__env__.metrics
 metrics.reporter.jmx.class=org.apache.samza.metrics.reporter.JmxReporterFactory
 
 # Task
